--- a/Alzy/app/src/main/res/values/strings.xml
+++ b/Alzy/app/src/main/res/values/strings.xml
@@ -28,4 +28,6 @@
         <item>Receita</item>
         <item>Despesa</item>
     </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
