Aju. no layout telas de login, cadastro e adicionado botão login com conta do Google na intro.

--- a/Alzy/app/src/main/res/values/strings.xml
+++ b/Alzy/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="organize_suas_">Organize suas contas \n onde estiver</string>
     <string name="simples_">Simples, fácil de usar e grátis</string>
     <string name="todo2">TODO</string>
-    <string name="cadastre_se_gratis">Cadastre-se, é grátis!</string>
+    <string name="cadastre_se_gratis">Cadastre-se grátis!</string>
     <string name="saiba_para_">Saiba para onde está indo seu dinheiro</string>
     <string name="organizando_">Organizando seus lançamentos e acompanhando\n o destino de cada centavo</string>
     <string name="todo">TODO</string>
