--- a/Alzy/app/src/main/res/values/strings.xml
+++ b/Alzy/app/src/main/res/values/strings.xml
@@ -30,5 +30,5 @@
     </string-array>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="cetgorias">Cetgorias</string>
+    <string name="cetgorias">Categorias</string>
 </resources>
