Ajustes de layout todas as telas degradê laranja-branco.

--- a/Alzy/app/src/main/res/values/strings.xml
+++ b/Alzy/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="versao">Versão 1.0</string>
     <string name="login_">Fazer Login</string>
     <string name="bem_">Bem vindo</string>
-    <string name="recup__">Recuperar</string>
+    <string name="recup__">Recuperar Senha</string>
     <string name="carregando">Carregando...</string>
     <string name="intro_1_app_controle_pessoal">Aplicativo grátis para controle\n financeiro pessoal 100% \non-line.</string>
     <string name="lan_amentos">Lançamentos</string>
